<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayRecipeActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLayout"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/displayPic"
                android:layout_below="@+id/descriptionInfo"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/ingredient"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ingredientsInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ingredients"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/ingredients"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/buffer"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/instructionsInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/instructions"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/instructions"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/buffer"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:typeface="serif" />

            <Gallery
                android:id="@+id/gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/addPhoto"
                android:layout_below="@+id/addPhoto"
                android:layout_marginBottom="10dp"
                android:paddingTop="5dp" />

            <Button
                android:id="@+id/addPhoto"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/instructionsInfo"
                android:layout_below="@+id/instructionsInfo"
                android:background="@drawable/photobutton"
                android:minHeight="36dp"
                android:onClick="addPhoto" />

            <TextView
                android:id="@+id/instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ingredientsInfo"
                android:layout_below="@+id/ingredientsInfo"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/instruc"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/displayPic"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/authorInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/author"
                android:layout_toRightOf="@+id/author"
                android:maxWidth="180dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/shortbuff"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/displayPic"
                android:layout_below="@+id/displayPic"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/descr"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/descriptionInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/description"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/description"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/buffer"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:typeface="serif" />

            <RatingBar
                android:id="@+id/displayRecipeRating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/dateInfo"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/displayPic" />

            <TextView
                android:id="@+id/dateInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/displayRecipeRating"
                android:layout_marginLeft="14dp"
                android:layout_toRightOf="@+id/displayPic"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:text="@string/shortbuff"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/dateInfo"
                android:layout_below="@+id/dateInfo"
                android:layout_marginTop="20dp"
                android:paddingTop="5dp"
                android:text="@string/author"
                android:textSize="15sp" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/fave_button"
            android:layout_width="85dp"
            android:layout_height="46dp"
            android:layout_alignLeft="@+id/gallery"
            android:layout_alignParentBottom="true"
            android:background="@drawable/regbutton"
            android:minHeight="36dp"
            android:onClick="addToFave"
            android:text="Favorite"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/publish"
            android:layout_width="85dp"
            android:layout_height="46dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/gallery"
            android:background="@drawable/regbutton"
            android:onClick="publishRecipe"
            android:text="@string/publish"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/share"
            android:layout_width="85dp"
            android:layout_height="46dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/publish"
            android:background="@drawable/regbutton"
            android:onClick="shareRecipe"
            android:text="@string/share"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>